[package]
name = "bitcoin_htlc_order_protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
bitcoin = "0.32.5"
candid = "0.10.13"
ic-cdk = "0.18.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_bytes = "0.11.15"
leb128 = "0.2.5"
sha2 = "0.10.8"
getrandom = { version = "0.2", features = ["custom"] }